--- a/assets/scss/case-detail.scss
+++ b/assets/scss/case-detail.scss
@@ -76,15 +76,17 @@
           font-size: 0;
           border-radius: 8px;
           overflow: hidden;
+          display: flex;
           @media only screen and (max-width: $mobile-max-width) {
             width: 100%;
+            display: block;
           }
           li {
             position: relative;
             display: inline-block;
             box-sizing: border-box;
             width: 220px;
-            height: 100%;
+            min-height: 100%;
             padding: 35px 30px;
 
             @media only screen and (max-width: $mobile-max-width) {
