--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -1,5 +1,10 @@
 @import "variables";
 
+.navigation {
+  box-shadow: 0 4px 8px 0 rgba(36, 46, 66, 0.06), 0 8px 16px 0 rgba(36, 46, 66, 0.05);
+  background-image: linear-gradient(to bottom, rgba(134, 219, 162, 0.9), rgba(0, 170, 114, 0.9));
+}
+
 .main-section {
   padding-top: 93px;
 
