--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -195,21 +195,6 @@
         display: none;
       }
 
-      button {
-        width: 112px;
-        height: 36px;
-        border-radius: 30px;
-        border: none;
-        font-size: 14px;
-        color: #ffffff;
-        cursor: pointer;
-        box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2);
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1) 97%), linear-gradient(to bottom, #242e42, #242e42);
-        &:hover {
-          box-shadow: none;
-        }
-      }
-
       &:hover {
         padding-bottom: 40px;
       }
@@ -279,6 +264,21 @@
   }
 }
 
+.demo-btn {
+  width: 112px;
+  height: 36px;
+  border-radius: 30px;
+  border: none;
+  font-size: 14px;
+  color: #ffffff;
+  cursor: pointer;
+  box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1) 97%), linear-gradient(to bottom, #242e42, #242e42);
+  &:hover {
+    box-shadow: none;
+  }
+}
+
 .navigationScroll {
   box-shadow: 0 4px 8px 0 rgba(36, 46, 66, 0.06), 0 8px 16px 0 rgba(36, 46, 66, 0.05);
   background-image: linear-gradient(to bottom, rgba(134, 219, 162, 0.9), rgba(0, 170, 114, 0.9));
@@ -321,7 +321,10 @@
         display: none;
 
         li {
+          box-sizing: border-box;
+          padding-top: 11px;
           font-weight: 500;
+          line-height: 1.75;
         }
 
         li:last-child {
@@ -360,6 +363,21 @@
 
     .up::after {
       transform: rotate(-135deg);
+    }
+  }
+
+  & > .btn-div {
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  & > .link-div {
+    margin-top: 27px;
+    text-align: center;
+
+    img {
+      width: 24px;
+      margin: 0 16px;
     }
   }
 }
