--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class='btn-li'>
                         <a href="https://demo.kubesphere.io/login" target="_blank" rel="noopener noreferrer">
-                            <button>{{ i18n "Demo" }} →</button>
+                            <button class="demo-btn">{{ i18n "Demo" }} →</button>
                         </a>
                         <ol class="dropdown-menu">
                             <li>{{ i18n "demo content 1" }}</li>
@@ -86,7 +86,15 @@
                 <span class='menu-span'>{{ .Name }}</span>
                 <ul class="dropdown-menu">
                     {{ range .Children }}
-                    <li {{ if eq $section .URL }} class="active"{{ end}}><a href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
+                    <li {{ if eq $section .URL }} class="active"{{ end}}>
+                        <a href="{{ .URL | absLangURL }}">
+                            {{ if .Title }}
+                            {{ .Title }}
+                            {{ else }}
+                            {{ .Name }}
+                            {{ end }}
+                        </a>
+                    </li>
                     {{ end }}
                 </ul>
             </li>
@@ -97,6 +105,22 @@
             {{ end }}
 
         </ul>
+        <div class="btn-div">
+            <a href="https://demo.kubesphere.io/login" target="_blank" rel="noopener noreferrer">
+                <button class="demo-btn">{{ i18n "Demo" }} →</button>
+            </a>
+        </div>
+        <div class="link-div">
+            <a href="{{ .Site.Params.slackLink }}" target="_blank">
+                <img src="/images/header/slack-hover.svg" alt="">
+            </a>
+            <a href="{{ .Site.Params.twitterLink }}" target="_blank">
+                <img src="/images/header/twitter-hover.svg" alt="">
+            </a>
+            <a href="{{ .Site.Params.githubLink }}" target="_blank">
+                <img src="/images/header/github-hover.svg" alt="">
+            </a>
+        </div>
     </div>
 </header>
 <script>
