--- a/assets/scss/blogs.scss
+++ b/assets/scss/blogs.scss
@@ -142,9 +142,28 @@
           top: 50%;
           right: 40px;
           transform: translateY(-50%);
-          display: block;
-          width: 64px;
-          height: 64px;
+
+          @media only screen and (max-width: $mobile-max-width) {
+            display: none;
+          }
+          svg {
+            width: 64px;
+            height: 64px;
+            color: #f5f8f9;
+            transition: all 0.2s ease-in-out;
+
+            &:hover {
+              color: #55bc8a;
+              & > g {
+                & > circle {
+                  stroke: #74d2a4;
+                }
+                & > path {
+                  fill: #fff;
+                }
+              }
+            }
+          }
         }
       }
 
