--- a/assets/scss/contribution.scss
+++ b/assets/scss/contribution.scss
@@ -312,6 +312,14 @@
   }
 }
 
+.section-iframe {
+  iframe {
+    @media only screen and (max-width: $mobile-max-width) {
+      width: 100%;
+    }
+  }
+}
+
 .section-3 {
   text-align: center;
   padding-top: 40px;
