--- a/layouts/contribution/request.html
+++ b/layouts/contribution/request.html
@@ -10,7 +10,7 @@
 {{ end }}
 
 <section class='section-iframe' style="margin-bottom: 60px;">
-  {{ with .Params.section3 }}
+  {{ with .Params.sectionIframe }}
   <div class="common-layout">
     <h2 style="margin: 40px 0;" class="title-black-h2">{{ .title }}</h2>
     <iframe src="{{ .googleFormUrl }}" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">正在加载…</iframe>
