--- a/layouts/partner/request.html
+++ b/layouts/partner/request.html
@@ -45,7 +45,7 @@
 </section>
 
 <section class='section-iframe'>
-  {{ with .Params.section3 }}
+  {{ with .Params.sectionIframe }}
   <div class="common-layout">
     <h2 style="margin: 40px 0;" class="title-black-h2">{{ .title }}</h2>
     <iframe src="{{ .googleFormUrl }}" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">正在加载…</iframe>
