--- a/layouts/_default/scenario.html
+++ b/layouts/_default/scenario.html
@@ -49,7 +49,19 @@
   <img class="bg-right" src="{{ .bgRight }}" alt="">
   <div class="common-layout">
     <h2 class="title-black-h2">{{ .title }}</h2>
+    {{ if .videoLink }}
+    <iframe 
+        id='iframe-player' 
+        src="{{ .videoLink }}" 
+        width="900" 
+        height="580" 
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+    </iframe>
+    {{ else }}
     <img src="{{ .image }}" alt="">
+    {{ end }}
     <p class="common-p">{{ .content }}</p>
     <a href="{{ .link }}"><button class="common-btn">{{ .btnContent }}</button></a>
   </div>
