--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,9 +4,9 @@
 
 <body>
 {{- partial "header.html" . -}}
-<section class="main-section">
+<main class="main-section">
     {{- block "main" . }}{{- end }}
-</section>
+</main>
 {{- partial "footer.html" . -}}
 </body>
 
