--- a/layouts/index.html
+++ b/layouts/index.html
@@ -105,7 +105,7 @@
         {{ if .check }}
         <span class="common-green-a">{{ i18n "Coming Soon" }} →</span>
         {{ else }}
-        <a class="common-green-a" href="{{ .link }}" target="_blank">{{ i18n "Read More" }} →</a>
+        <a class="common-green-a" href="{{ .link }}" target="_blank" rel="noopener noreferrer">{{ i18n "Read More" }} →</a>
         {{ end }}
       </li>
       {{ end }}
@@ -167,12 +167,12 @@
       {{ end }}
     </ul>
     <div>
-      <a href="{{ .btnLink }}" target="_blank"><button>{{ .btnContent }}</button></a>
+      <a href="{{ .btnLink }}"><button>{{ .btnContent }}</button></a>
     </div>
     <div class='link-div'>
-      <a class="common-black-a" href="{{ .link }}" target="_blank">{{ .linkContent }}</a>
+      <a class="common-black-a" href="{{ .link }}" target="_blank" rel="noopener noreferrer">{{ .linkContent }}</a>
     </div>
-    <a class='join-div' href="{{ .joinLink }}" target="_blank">
+    <a class='join-div' href="{{ .joinLink }}">
       <p class='p1'>{{ .joinTitle }}</p>
       <p class='p2'>{{ .joinContent }}</p>
       <img src="/images/home/join-right.svg" alt="">
