--- a/layouts/partner/list.html
+++ b/layouts/partner/list.html
@@ -55,7 +55,7 @@
                     <h3 class="common-content">{{ .title }}</h3>
                     <p class="common-p">{{ .content }}</p>
                     <div>
-                        <a class="common-green-a" href="{{ .link }}" target="_blank">{{ $tip }}</a>
+                        <a class="common-green-a" href="{{ .link }}">{{ $tip }}</a>
                     </div>
                 </li>
             {{ end }}
