--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,12 +22,24 @@
                     <span class='menu-span'>{{ .Name }}</span>
                     <ul class="dropdown-menu menu-{{ .Name }}">
                         {{ range .Children }}
-                        <li {{ if eq $section .URL }} class="active"{{ end}}><a href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
+                        <li {{ if eq $section .URL }} class="active"{{ end}}>
+                            {{ if hasPrefix .URL "http" }}
+                            <a href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a>
+                            {{ else }}
+                            <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+                            {{ end }}
+                        </li>
                         {{ end }}
                     </ul>
                 </li>
                 {{ else }}
-                <li {{ if eq $section .URL }} class="active"{{ end}}><a href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
+                <li {{ if eq $section .URL }} class="active"{{ end}}>
+                    {{ if hasPrefix .URL "http" }}
+                    <a href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a>
+                    {{ else }}
+                    <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+                    {{ end }}                
+                </li>
                 {{ end }}
 
                 {{ end }}
@@ -57,9 +69,9 @@
                         </ol>
                     </li>
                     <li class='link-li'>
-                        <a class='link-1' href="{{ .Site.Params.slackLink }}" target="_blank"></a>
-                        <a class='link-2' href="{{ .Site.Params.twitterLink }}" target="_blank"></a>
-                        <a class='link-3' href="{{ .Site.Params.githubLink }}" target="_blank"></a>
+                        <a class='link-1' href="{{ .Site.Params.slackLink }}" target="_blank" rel="noopener noreferrer"></a>
+                        <a class='link-2' href="{{ .Site.Params.twitterLink }}" target="_blank" rel="noopener noreferrer"></a>
+                        <a class='link-3' href="{{ .Site.Params.githubLink }}" target="_blank" rel="noopener noreferrer"></a>
                     </li>
                     <li class="menu-icon">
                         <img src="/images/header/menu.svg" alt="">
@@ -105,13 +117,13 @@
             </a>
         </div>
         <div class="link-div">
-            <a href="{{ .Site.Params.slackLink }}" target="_blank">
+            <a href="{{ .Site.Params.slackLink }}" target="_blank" rel="noopener noreferrer">
                 <img src="/images/header/slack-hover.svg" alt="">
             </a>
-            <a href="{{ .Site.Params.twitterLink }}" target="_blank">
+            <a href="{{ .Site.Params.twitterLink }}" target="_blank" rel="noopener noreferrer">
                 <img src="/images/header/twitter-hover.svg" alt="">
             </a>
-            <a href="{{ .Site.Params.githubLink }}" target="_blank">
+            <a href="{{ .Site.Params.githubLink }}" target="_blank" rel="noopener noreferrer">
                 <img src="/images/header/github-hover.svg" alt="">
             </a>
         </div>
