--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -18,10 +18,10 @@
                 {{ range .children }}
                 <li data-name="{{ $name }}">
                     <img src="{{ .icon | absURL }}" alt="">
-                    <a href="{{ .link }}" target="_blank">{{ .title }}</a>
+                    <a href="{{ .link }}" target="_blank" rel="noopener noreferrer">{{ .title }}</a>
                     <p>{{ .description }}</p>
                     <div>
-                        <a href="{{ .link }}" target="_blank">Github</a>
+                        <a href="{{ .link }}" target="_blank" rel="noopener noreferrer">Github</a>
                     </div>
                 </li>
                 {{ end }}
