--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -137,11 +137,11 @@
     // }
   }
 
-  .menu-Scenario {
+  .menu-2 {
     width: 260px;
   }
 
-  .menu-Community {
+  .menu-5 {
     width: 120px;
   }
 
