--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,7 +20,7 @@
 
                 <li {{ if $active }} class="menu-li menu-active" {{ else }} class="menu-li" {{ end}}>
                     <span class='menu-span'>{{ .Name }}</span>
-                    <ul class="dropdown-menu menu-{{ .Name }}">
+                    <ul class="dropdown-menu menu-{{ .Weight }}">
                         {{ range .Children }}
                         <li {{ if eq $section .URL }} class="active"{{ end}}>
                             {{ if hasPrefix .URL "http" }}
