--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -149,21 +149,25 @@
       }
 
       .tabs {
-        li {
-          margin: 4px 0;
-          font-size: 16px;
+        #TableOfContents > ul > li > a {
           font-weight: 500;
+        }
+        li {
+          margin: 10px 0;
+          font-size: 16px;
           line-height: 2;
           color: #36435c;
 
           a {
             display: block;
             width: 100%;
-            height: 32px;
+            font-weight: 400;
+            line-height: 24px;
             color: #36435c;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
+
+            &:hover {
+              color: #55bc8a;
+            }
           }
         }
         li li {
