--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -20,7 +20,7 @@
                     <span id="message" data-message1='{{ i18n "email is required" }}' data-message2='{{ i18n "Please enter a valid email address." }}'></span>
                 </div>
                 <div class="right-div">
-                    <ul>
+                    <ul class="common-flex-layout">
                         {{ with $data.footer.footer }}
                         {{ range .list }}
                             <li>
