change absURL to relURL

--- a/layouts/blogs/single.html
+++ b/layouts/blogs/single.html
@@ -13,7 +13,7 @@
 <section class="main-section">
     <div class="common-layout">
         <div class='breadcrumb'>
-            <span><a href='{{ "blogs" | absLangURL }}'>{{ i18n "introduction1"}}</a> > </span>
+            <span><a href='{{ "blogs" | relLangURL }}'>{{ i18n "introduction1"}}</a> > </span>
             <span>{{ .Title }}</span>
         </div>
         <div class='main-div'>
@@ -33,7 +33,7 @@
     </div>
 </section>
 {{- partial "footer.html" . -}}
-<script src='{{ "js/aside.js" | absURL }}'></script>
+<script src='{{ "js/aside.js" | relURL }}'></script>
 </body>
 
 </html>
