--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -7,7 +7,7 @@
 
 {{ if .Params.minCss }}
 {{ range (split .Params.minCss ",")}}
-<link rel="stylesheet" href="{{ . | absURL }}">
+<link rel="stylesheet" href="{{ . | relURL }}">
 {{ end }}
 {{ end }}
 
