--- a/layouts/videos/list.html
+++ b/layouts/videos/list.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<script src='{{ "js/pagination.min.js" | absURL }}'></script>
+<script src='{{ "js/pagination.min.js" | relURL }}'></script>
 
 <script>
     var bindClickVideoTabLi = function() {
