--- a/layouts/partner/request.html
+++ b/layouts/partner/request.html
@@ -15,32 +15,32 @@
         <div class="left-div">
             <div class="common-content">{{ .title }}</div>
             <p class="common-p">{{ .content }}</p>
-            <img class='img-1' src="{{ .bg2 | absURL }}" alt="">
-            <img class='img-2' src="{{ .bg3 | absURL }}" alt="">
+            <img class='img-1' src="{{ .bg2 | relURL }}" alt="">
+            <img class='img-2' src="{{ .bg3 | relURL }}" alt="">
         </div>
         <div class="right-div">
-            <img src="{{ .mapImage | absURL }}" alt="">
+            <img src="{{ .mapImage | relURL }}" alt="">
             <div class='btn-div div-1'>
                 <p>{{ .name1 }}</p>
                 <div>
-                    <img src="{{ .icon1 | absURL }}" alt="">
+                    <img src="{{ .icon1 | relURL }}" alt="">
                 </div>
             </div>
             <div class='btn-div div-2'>
                 <p>{{ .name2 }}</p>
                 <div>
-                    <img src="{{ .icon2 | absURL }}" alt="">
+                    <img src="{{ .icon2 | relURL }}" alt="">
                 </div>
             </div>
             <div class='btn-div div-3'>
                 <p>{{ .name3 }}</p>
                 <div>
-                    <img src="{{ .icon3 | absURL }}" alt="">
+                    <img src="{{ .icon3 | relURL }}" alt="">
                 </div>
             </div>
         </div>
     </div>
-    <img src="{{ .bg1 | absURL }}" alt="">
+    <img src="{{ .bg1 | relURL }}" alt="">
     {{ end }}
 </section>
 
